добавлена функция подтверждения email и некоторые улучшения
